Caricamento da url

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button onclick="carica()"> Carica</button>
 <button id="resetbtn" onclick="reset()"> Reset</button>
 <button id="reset"  style="display:none" onclick="location.reload()"> Vai!</button>
+<button id="test" onclick="test()"> test</button>
 </div>
 
 
