beta 0.9 cloud test
beta 0.9 cloud test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <button type="button" id="btnApri" onclick="apri()">Apri texbox</button>
 <textarea name="testo" id="txtarea" cols="30" rows="3"></textarea>
 <button onclick="carica()"> Carica</button>
-<button id="resetbtn" onclick="reset()"> Reset</button>
+<button id="resetbtn" onclick="reset()"  style="display:none"> Reset</button>
 <button id="reset"  style="display:none" onclick="location.reload()"> Vai!</button>
 </div>
 
