--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>PixelsTheory</title>
     <link rel="stylesheet" href="styles.css">
+    
   </head>
   <body>
     <div id="header"></div>
@@ -13,16 +14,9 @@
         <div id="side2"></div>
     </div>
 <div id="cpanel">
-<button type="button" id="btnSave" onclick="save()">Salva</button>
-<button type="button" id="btnApri" onclick="apri()">Apri texbox</button>
-<textarea name="testo" id="txtarea" cols="30" rows="3"></textarea>
-<button onclick="carica()"> Carica</button>
-<button id="resetbtn" onclick="reset()"> Reset</button>
-<button id="reset"  style="display:none" onclick="location.reload()"> Vai!</button>
+
 </div>
-
-
-    <script src="tmi.min.js"></script>
-    <script src="main.js"></script>
+<script src="tmi.min.js"></script>
+<script src="main.js" type="module"></script>
   </body>
 </html>
